--- a/app/views/backend/admin/shared/_left_sidebar.html.haml
+++ b/app/views/backend/admin/shared/_left_sidebar.html.haml
@@ -39,6 +39,10 @@
           = link_to admin_customers_path do
             %i.entypo-users
             %span.title Customers
+        %li
+          = link_to admin_customer_invoices_path do
+            %i.entypo-users
+            %span.title Customer Invoices
       -#  %ul.visible
       -#    %li.active
       -#      %a{:href => "index.html"}
