--- a/app/views/backend/admin/employees/partials/_form.html.haml
+++ b/app/views/backend/admin/employees/partials/_form.html.haml
@@ -41,6 +41,15 @@
                   .form-group
                     %label.control-label{:for => "color"} Color
                     =f.color_field :color , class: 'form-control'
+              .row
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} Password
+                    =f.password_field :password , class: 'form-control' ,required: true , placeholder: 'Password' , data: {"validate": "required"}
+                .col-md-6
+                  .form-group
+                    %label.control-label{:for => "full_name"} Confirm Password
+                    =f.password_field :password_confirmation , class: 'form-control' ,required: true , placeholder: 'Confirm Password' , data: {"validate": "required"}
         .form-group.default-padding.pull-right{style: 'margin-top: 15px;'}
           = f.submit "Submit" , class: 'btn btn-success'
           %button.btn{:type => "reset"} Reset
