--- a/app/views/backend/admin/customer_invoices/index.html.haml
+++ b/app/views/backend/admin/customer_invoices/index.html.haml
@@ -13,11 +13,11 @@
     %a#add-note.btn.btn-md.btn-primary.btn-icon.icon-left.pull-left{href: "#{new_admin_customer_invoice_path}" , style: 'margin-top: 15px !important;'}
       %i.entypo-plus
       New Invoice
-  -#.col-md-6.col-sm-6
+  .col-md-6.col-sm-6
     .search-form-contaner
       = search_form_for @search , url: search_admin_customers_path , method: :post , class: 'search-form-full' do |f|
         .form-group
-          = f.text_field :first_name_cont, class: "form-control", placeholder: "Search..."
+          = f.text_field :id_cont, class: "form-control", placeholder: "Search..."
           %i.entypo-search
   %br
   %br
@@ -44,16 +44,7 @@
             %td= invoice.formatted_issue_date
             %td= invoice.formatted_due_date
             %td= invoice.formatted_total_amount
-            -#%td
-            -#  %aside.user-thumb
-            -#    %a{:href => "#"}
-            -#      = image_tag customer.image ,width: '44px', class: 'img-circle'
-            -#      %b.publisher
-            -#        %a{:href => "#{admin_customer_path(customer)}"}= customer.full_name
-            -#-#%b
-            -#        %em= employee.email
-            -#%td.user-thumb= customer.phone
-            -#%td.user-thumb= customer.full_address
             %td.text-center
               = invoice.edit_button_link
               = invoice.delete_button_link
+              = invoice.download_link
